# rustmcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-22-ci.md  2026-05-23-architecture-cleanup.md
docs/superpowers/specs/: 2026-05-22-ci-design.md  2026-05-23-architecture-cleanup-design.md
src/: cargo.rs  error.rs  lib.rs  main.rs  server.rs  tools.rs  workspace.rs
src/cargo/: args.rs  mod.rs  output.rs  params.rs  process.rs  tools.rs
src/lsp/: client.rs  framing.rs  mod.rs  protocol.rs  snippets.rs
src/ra/: completion.rs  diagnostics.rs  edits.rs  inlay_hints.rs  locate.rs  mod.rs  navigation.rs  params.rs  symbols.rs
src/server/: mod.rs  response.rs  state.rs
tests/: cargo_tests.rs  framing_tests.rs  integration_basic.rs  workspace_tests.rs
