[package]
name = "rust-analyzer-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A stdio MCP server that exposes rust-analyzer intelligence to coding agents."

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = { version = "1.1.0", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
lsp-types = "0.97.0"
url = "2.5.7"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.23.0"

